--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gooh/interface-distiller",
+    "name": "kaboodle/interface-distiller",
     "description": "Derives Interfaces from the API of a class",
     "type": "library",
     "version": "1.0.4",
@@ -7,14 +7,15 @@
     "keywords": ["reflection","generator","interface"],
     "license": "MIT",
     "authors": [{
+        "name": "John Mitchell",
         "name": "Gordon Oheim"
     }],
     "support": {
-        "source": "https://github.com/gooh/InterfaceDistiller",
-        "issues": "https://github.com/gooh/InterfaceDistiller/issues"
+        "source": "https://github.com/kaboodle-solutions/InterfaceDistiller",
+        "issues": "https://github.com/kaboodle-solutions/InterfaceDistiller/issues"
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=7.1.0"
     },
     "autoload": {
         "classmap": ["src/"]
